@@ -17,6 +17,7 @@
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=25445).
   * Moved detection of type to a separate method in Magick++. The type() method
     no longer modifies the type of the image. Use determineType() instead.
+  * Improved error messages when a coder uses Ghostscript.
 
 2014-04-11  6.8.9-0 Cristy  <quetzlzacatenango@image...>
   * New version 6.8.9-0, SVN revision 15441.
